# lumatone-sandbox

./: .gitignore  CMakeLists.txt  LumatoneSandbox.jucer  LumatoneSandbox_Standalone.juce.old
Source/: ApplicationListeners.h  DeviceActivityMonitor.cpp  DeviceActivityMonitor.h  LumatoneController.cpp  LumatoneController.h  LumatoneEventManager.cpp  LumatoneEventManager.h  Main.cpp  MainComponent.cpp  MainComponent.h  SandboxMenu.cpp  SandboxMenu.h  SandboxState.cpp  SandboxState.h
Source/game/: game_base.cpp  game_base.h  game_engine.cpp  game_engine.h  game_engine_component.h
Source/game/hex_rings/: hex_rings.cpp  hex_rings.h  hex_rings_launcher.cpp  hex_rings_launcher.h
Source/game/hexagon_automata/: hexagon_automata.cpp  hexagon_automata.h  hexagon_automata_launcher.cpp  hexagon_automata_launcher.h
Source/game/random_colors/: random_colors.cpp  random_colors.h  random_colors_launcher.cpp  random_colors_launcher.h
Source/gui/: adjust_colour_panel.cpp  adjust_colour_panel.h  colour_edit_panel.cpp  colour_edit_panel.h  connection_status.cpp  connection_status.h
Source/hex/: hex_field.cpp  hex_field.h  hex_geometry.cpp  hex_geometry.h  lumatone_hex_map.cpp  lumatone_hex_map.h
Source/lumatone/: BoardGeometry.cpp  BoardGeometry.h  HexagonTilingGeometry.cpp  HexagonTilingGeometry.h  KeyboardDataStructure.cpp  KeyboardDataStructure.h  LumatoneKeyComponent.cpp  LumatoneKeyComponent.h  LumatoneKeyboardComponent.cpp  LumatoneKeyboardComponent.h  ViewComponents.h  ViewConstants.h  lumatone_state.cpp  lumatone_state.h
Source/lumatone/ImageResampling/: ImageResampler.h
Source/lumatone_editor_library/: ApplicationListeners.h  BoardGeometry.cpp  BoardGeometry.h  DeviceActivityMonitor.cpp  DeviceActivityMonitor.h  EditorEmitter.h  HexagonTilingGeometry.cpp  HexagonTilingGeometry.h  LumatoneController.cpp  LumatoneController.h  LumatoneDataStructures.cpp  LumatoneDataStructures.h  LumatoneEventManager.cpp  LumatoneEventManager.h  LumatoneKeyComponent.cpp  LumatoneKeyComponent.h  LumatoneKeyboardComponent.cpp  LumatoneKeyboardComponent.h  ViewComponents.h  key_update_buffer.cpp  key_update_buffer.h  lumatone_assets.h  lumatone_editor_common.h  lumatone_geometry.cpp  lumatone_geometry.h  lumatone_midi_state.cpp  lumatone_midi_state.h  lumatone_output_map.cpp  lumatone_output_map.h  lumatone_render.cpp  lumatone_state.cpp  lumatone_state.h  lumatone_tiling.cpp  lumatone_tiling.h  state_base.cpp
Source/lumatone_editor_library/actions/: edit_actions.cpp  edit_actions.h  lumatone_action.cpp  lumatone_action.h
Source/lumatone_editor_library/color/: adjust_layout_colour.cpp  adjust_layout_colour.h  colour_model.cpp  colour_model.h  interpolation.h  lumatone_colour.cpp  lumatone_colour.h
Source/lumatone_editor_library/data/: lumatone_board.cpp  lumatone_board.h  lumatone_key.cpp  lumatone_key.h  lumatone_layout.cpp  lumatone_layout.h  lumatone_midi_state.cpp  lumatone_midi_state.h  lumatone_state.cpp  lumatone_state.h
Source/lumatone_editor_library/hex/: hex_field.cpp  hex_field.h  lumatone_hex_map.cpp  lumatone_hex_map.h
Source/lumatone_editor_library/lumatone_midi_driver/: firmware_definitions.h  lumatone_midi_driver.cpp
Source/lumatone_editor_library/palettes/: ColourPaletteComponent.cpp  ColourPaletteComponent.h  ColourPaletteDataStructure.h  ColourPaletteWindow.h  ColourSelectionPanels.h  HexagonPalette.h
Source/lumatone_editor_library/tuning/: NotationDefinition.cpp  NotationDefinition.h  NotationTable.cpp  NotationTable.h
Source/lumatone_midi_driver/: firmware_definitions.h  lumatone_midi_driver.cpp  lumatone_midi_driver.h  midi-driver.cpp  midi_driver.h
Source/plugin/: sandbox_editor.cpp  sandbox_editor.h  sandbox_processor.cpp  sandbox_processor.h
Source/shared/: MainComponent.cpp  MainComponent.h  SandboxMenu.cpp  SandboxMenu.h  SandboxState.cpp  SandboxState.h
Source/shared/debug/: LumatoneSandboxDebugWindow.cpp  LumatoneSandboxDebugWindow.h  LumatoneSandboxLogTableModel.cpp  LumatoneSandboxLogTableModel.h  LumatoneSandboxLogger.cpp  LumatoneSandboxLogger.h
Source/shared/game/: game_base.cpp  game_base.h  game_component.h  game_engine.cpp  game_engine.h  game_engine_component.cpp  game_engine_component.h
Source/shared/game_engine/: game_engine.cpp  game_engine.h  game_engine_component.cpp  game_engine_component.h  game_engine_state.cpp  game_engine_state.h  game_loader.cpp  game_loader.h
Source/shared/games/: game_base.cpp  game_base.h  game_base_state.cpp  game_base_state.h  game_component.h  games_index.h
Source/shared/gui/: ColourPaletteWindow.cpp  ColourPaletteWindow.h  adjust_colour_panel.cpp  adjust_colour_panel.h  colour_palette_component.cpp  colour_palette_component.h  colour_view_component.cpp  colour_view_component.h  connection_status.cpp  connection_status.h  palette_selection_panel.h
Source/shared/lumatone_editor_library/: ApplicationListeners.h  DeviceActivityMonitor.cpp  DeviceActivityMonitor.h  LumatoneController.cpp  LumatoneController.h  LumatoneEventManager.cpp  LumatoneEventManager.h  LumatoneKeyComponent.cpp  LumatoneKeyComponent.h  LumatoneKeyboardComponent.cpp  LumatoneKeyboardComponent.h  ViewComponents.cpp  ViewComponents.h  key_update_buffer.cpp  key_update_buffer.h  lumatone_editor_common.h  lumatone_geometry.cpp  lumatone_output_map.h  lumatone_render.cpp  lumatone_render.h  lumatone_tiling.h
Source/standalone/: Main.cpp
(+138 files in other folders)
